# todo

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  coverage.xml  pyproject.toml  todo.db
.data/: todo.db
.github/: copilot-instructions.md
.github/workflows/: ci.yml  e2e-quick-add.yml  e2e.yml
app/: db.py  deps.py  main.py
app/models/: todo.py
app/routers/: health.py  metrics.py  todos.py
app/schemas/: todo.py
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json  playwright.config.ts  proxy.conf.json
frontend/playwright-report/: index.html
frontend/src/: main.ts
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.css  app.module.ts  app.routes.ts  app.ts  root-redirect.component.ts  root-redirect.guard.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/environments/: environment.ts
frontend/test-results/: .last-run.json
frontend/test-results/create-todo-create-todo-via-UI-chromium/: error-context.md  video.webm
frontend/test-results/edit-todo-edit-todo-updates-title-and-persists-chromium/: error-context.md  video.webm
frontend/test-results/quick-add-quick-add-creates-todo-and-shows-snackbar-chromium/: error-context.md  video.webm
frontend/tests-e2e/: create-todo.spec.ts  edit-todo.spec.ts  quick-add.spec.ts  smoke.spec.ts
scripts/: run-e2e-local.sh  serve_spa.py  setup-frontend.sh  start-backend.sh  start-frontend.sh
tests/: conftest.py  test_auth.py  test_health.py  test_smoke.py  test_todos.py  test_todos_params.py
(+18 files in other folders)
